--- a/README.rdoc
+++ b/README.rdoc
@@ -14,19 +14,35 @@ It attempts to do following operations on file name:
 
 If result is an empty string, it computes MD5 hash of the original string.
 
-Here comes a quick code sample. Currently no docs.
-
-  class Person < ActiveRecord::Base
-    has_attachment :photo
-    before_post_process :strip_strange_characters_from_attachments
-  end
-
-It adds new method String#strip_strange_characters so you can use stripping
+It also adds new method String#strip_strange_characters so you can use stripping
 feature in any other context. It takes two boolean arguments:
 
 * ignore - indicates if characters that cannot be transliterated should be ignored,
 * hash - indicates if MD5 hash should be computed in case of empty result.
   
+== Code samples
+
+Here comes a quick code sample. Currently no docs.
+
+=== Paperclip
+
+  class Person < ActiveRecord::Base
+    has_attachment :photo
+    before_post_process :strip_strange_characters_from_attachments
+  end
+  
+It is enough to call this callback once as it affects all attachments of the
+model. Currently there's no way to define callback for selected attachments.
+
+=== Standalone
+
+  1.9.3-p194 :001 > "ąqwertÓŁ".strip_strange_characters
+   => "qwert" 
+  1.9.3-p194 :002 > "it's coffee time".strip_strange_characters
+   => "its-coffee-time" 
+  1.9.3-p194 :003 > "ABCD_EFGH".strip_strange_characters
+   => "abcd-efgh" 
+
 = Installation
 
 === Ruby Versions
